--- a/index.html
+++ b/index.html
@@ -156,39 +156,54 @@
                 </div>
                 <div class="p3_imgwrapper1 p3_imgwrapper col-md-2">
                     <div class="imgBox">
-                        <p class="p3_inner_text" style="font-family:MyFontName;">视</p>
-                        <p class="p3_inner_text" style="font-family:MyFontName;">频</p>
-                        <img class="p3_img1" src="./images/1.png" />
+                        <div class="p3_inner_text_wrapper">
+                            <p class="p3_inner_text" style="font-family:MyFontName;">视</p>
+                            <p class="p3_inner_text" style="font-family:MyFontName;">频</p>
+                        </div>
+                        <!-- <img class="p3_img1" src="./images/1.png" /> -->
+                        <div class="p3_img p3_img_1"></div>
                     </div>
                 </div>
                 <div class="p3_imgwrapper2 p3_imgwrapper col-md-2">
                     <div class="imgBox">
-                        <p class="p3_inner_text">文</p>
-                        <p class="p3_inner_text">章</p>
-                        <img class="p3_img2" src="./images/2.png" />
+                        <div class="p3_inner_text_wrapper">
+                            <p class="p3_inner_text">文</p>
+                            <p class="p3_inner_text">章</p>
+                        </div>
+                        <!-- <img class="p3_img2" src="./images/2.png" /> -->
+                        <div class="p3_img p3_img_2"></div>
                     </div>
                 </div>
                 <div class="p3_imgwrapper3 p3_imgwrapper col-md-2">
                     <div class="imgBox">
-                        <div class="p3_inner_text p3MidText">详</div>
-                        <div class="p3_inner_text p3MidText">细</div>
-                        <div class="p3_inner_text p3MidText">了</div>
-                        <div class="p3_inner_text p3MidText">解</div>
-                        <img class="p3_img3" src="./images/3.png" />
+                        <div class="p3_inner_text_wrapper">
+                            <div class="p3_inner_text p3MidText">详</div>
+                            <div class="p3_inner_text p3MidText">细</div>
+                            <div class="p3_inner_text p3MidText">了</div>
+                            <div class="p3_inner_text p3MidText">解</div>
+                        </div>
+                        <!-- <img class="p3_img3" src="./images/3.png" /> -->
+                        <div class="p3_img p3_img_3"></div>
                     </div>
                 </div>
                 <div class="p3_imgwrapper4 p3_imgwrapper col-md-2">
-                    <div class="p3_inner_text">音</div>
-                    <div class="p3_inner_text">乐</div>
+                    <div class="p3_inner_text_wrapper">
+                        <div class="p3_inner_text">音</div>
+                        <div class="p3_inner_text">乐</div>
+                    </div>
                     <div class="imgBox">
-                        <img class="p3_img4" src="./images/4.png" />
+                        <!-- <img class="p3_img4" src="./images/4.png" /> -->
+                        <div class="p3_img p3_img_4"></div>
                     </div>
                 </div>
                 <div class="p3_imgwrapper5 p3_imgwrapper col-md-2">
-                    <div class="p3_inner_text">其</div>
-                    <div class="p3_inner_text">他</div>
+                    <div class="p3_inner_text_wrapper">
+                        <div class="p3_inner_text">其</div>
+                        <div class="p3_inner_text">他</div>
+                    </div>
                     <div class="imgBox">
-                        <img class="p3_img5" src="./images/5.png" />
+                        <!-- <img class="p3_img5" src="./images/5.png" /> -->
+                        <div class="p3_img p3_img_5"></div>
                     </div>
                 </div>
                 <div class="p3_padding col-md-1	">
