--- a/index.html
+++ b/index.html
@@ -217,22 +217,21 @@
     </section>
 
     <section
-      class="ftco-section ftco-slant ftco-slant-white ftco-slant-hidden"
+      class="ftco-section part4"
       id="section-about"
       style="background-color:rgb(40, 40, 40)"
     >
-      <div id="developer-list">
-        <h2 class="title">开发者名单</h2>
-        <p class="col-md-8 col-sm-12" id="developer-names"></p>
-      </div>
-      <div class="d-md">
-        <div class="bar-container">
-          <img class="asoul-bar asoul-bar-bg" src="./images/color-bar.png">
-          <div class="p4_offset"></div>
-          <div class="p4_bar_bottom"></div>
+        <div id="p4_developer_list">
+            <h2 class="title">开发者名单</h2>
+            <!-- Get developer name list by js and insert multiple elements -->
+            <!-- like `<span>developer_name</span>` in `p#p4_developer_names` -->
+            <p class="col-md-8 col-sm-12" id="p4_developer_names"></p>
         </div>
-      </div>
-      <div class="asoul-bar-vert"></div>
+        <div class="p4_bar_wrapper">
+            <img class="p4_asoul_bar" src="./images/part4_asoul_bar.png">
+            <div class="p4_bar_bottom"></div>
+        </div>
+        <div class="p4_asoul_bar_vert"></div>
     </section>
 
     <footer class="ftco-footer bg-light" id="section-counter" style="background-color:rgb(29, 29, 29)">
