--- a/index.html
+++ b/index.html
@@ -104,39 +104,44 @@
             <div id="p2MainFlexWrapper" class="p2MainFlexWrapperNormal">
                 <div class="p2ImgWrapper12">
                     <div class="p2_introduce">
-                        <div class="p2_intro">向晚(AVA):乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合游戏担当（Gamer）。</div>
+                        <div class="p2_intro" style="background-color: #9AC8E2;">
+                            向晚(AVA):乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合游戏担当。</div>
                         <div class="p2_imgwrapper1 p2_imgwrapper">
                             <div class="p2_inner_text">向</br>晚</br>A</br>V</br>A</div>
                             <img class="p2_img" src="images/1.png" alt="向晚AvA">
                         </div>
                     </div>
                     <div class="p2_introduce">
-                        <div class="p2_intro">向晚(AVA):乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合游戏担当（Gamer）。</div>
+                        <div class="p2_intro" style="background-color: #DB7D74;">
+                            贝拉(Bella):乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合队长兼舞蹈担当。</div>
                         <div class="p2_imgwrapper2 p2_imgwrapper">
-                            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+                            <div class="p2_inner_text">贝</br>拉</br>A</br>V</br>A</div>
                             <img class="p2_img" src="images/2.png" alt="贝拉Bella">
                         </div>
                     </div>
                 </div>
                 <div class="p2ImgWrapper345">
                     <div class="p2_introduce">
-                        <div class="p2_intro">向晚(AVA):乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合游戏担当（Gamer）。</div>
+                        <div class="p2_intro" style="background-color: #B8A6D9;">
+                            珈乐(Carol):乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合Vocal担当。</div>
                         <div class="p2_imgwrapper3 p2_imgwrapper">
-                            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+                            <div class="p2_inner_text">珈</br>乐</br>A</br>V</br>A</div>
                             <img class="p2_img" src="images/3.png" alt="珈乐Carol">
                         </div>
                     </div>
                     <div class="p2_introduce">
-                        <div class="p2_intro">向晚(AVA):乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合游戏担当（Gamer）。</div>
+                        <div class="p2_intro" style="background-color: #E799B0;">
+                            嘉然(Diana):乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合吃货担当。</div>
                         <div class="p2_imgwrapper4 p2_imgwrapper">
-                            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+                            <div class="p2_inner_text">嘉</br>然</br>A</br>V</br>A</div>
                             <img class="p2_img" src="images/4.png" alt="嘉然Diana">
                         </div>
                     </div>
                     <div class="p2_introduce">
-                        <div class="p2_intro">向晚(AVA):乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合游戏担当（Gamer）。</div>
+                        <div class="p2_intro" style="background-color: #576690;">
+                            乃琳(Eileen):乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合MC担当。</div>
                         <div class="p2_imgwrapper5 p2_imgwrapper">
-                            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+                            <div class="p2_inner_text">乃</br>琳</br>A</br>V</br>A</div>
                             <img class="p2_img" src="images/5.png" alt="乃琳Eileen">
                         </div>
                     </div>
@@ -146,7 +151,7 @@
         </div>
     </section>
     <!--part3-->
-    <section class="ftco-section  part3" id="fansCulture" style="background-color:#1d1d1d;">
+    <section class="ftco-section  part3" id="section-pricing" style="background-color:#1d1d1d;">
         <div id="pt3">
             <div class="part3Top"></div>
             <div class="p3_container">
@@ -156,39 +161,55 @@
                 </div>
                 <div class="p3_imgwrapper1 p3_imgwrapper col-md-2">
                     <div class="imgBox">
-                        <p class="p3_inner_text" style="font-family:MyFontName;">视</p>
-                        <p class="p3_inner_text" style="font-family:MyFontName;">频</p>
-                        <img class="p3_img1" src="./images/1.png" />
+                        <div class="p3_inner_text_wrapper">
+                            <p class="p3_inner_text" style="font-family:MyFontName;">视</p>
+                            <p class="p3_inner_text" style="font-family:MyFontName;">频</p>
+                        </div>
+                        <!-- <img class="p3_img1" src="./images/1.png" /> -->
+                        <div class="p3_img p3_img_1"></div>
                     </div>
+                    <div style="filter: blur(5px);"></div>
                 </div>
                 <div class="p3_imgwrapper2 p3_imgwrapper col-md-2">
                     <div class="imgBox">
-                        <p class="p3_inner_text">文</p>
-                        <p class="p3_inner_text">章</p>
-                        <img class="p3_img2" src="./images/2.png" />
+                        <div class="p3_inner_text_wrapper">
+                            <p class="p3_inner_text">文</p>
+                            <p class="p3_inner_text">章</p>
+                        </div>
+                        <!-- <img class="p3_img2" src="./images/2.png" /> -->
+                        <div class="p3_img p3_img_2"></div>
                     </div>
                 </div>
                 <div class="p3_imgwrapper3 p3_imgwrapper col-md-2">
                     <div class="imgBox">
-                        <div class="p3_inner_text p3MidText">详</div>
-                        <div class="p3_inner_text p3MidText">细</div>
-                        <div class="p3_inner_text p3MidText">了</div>
-                        <div class="p3_inner_text p3MidText">解</div>
-                        <img class="p3_img3" src="./images/3.png" />
+                        <div class="p3_inner_text_wrapper">
+                            <div class="p3_inner_text p3MidText">详</div>
+                            <div class="p3_inner_text p3MidText">细</div>
+                            <div class="p3_inner_text p3MidText">了</div>
+                            <div class="p3_inner_text p3MidText">解</div>
+                        </div>
+                        <!-- <img class="p3_img3" src="./images/3.png" /> -->
+                        <div class="p3_img p3_img_3"></div>
                     </div>
                 </div>
                 <div class="p3_imgwrapper4 p3_imgwrapper col-md-2">
-                    <div class="p3_inner_text">音</div>
-                    <div class="p3_inner_text">乐</div>
                     <div class="imgBox">
-                        <img class="p3_img4" src="./images/4.png" />
+                        <div class="p3_inner_text_wrapper">
+                            <div class="p3_inner_text">音</div>
+                            <div class="p3_inner_text">乐</div>
+                        </div>
+                        <!-- <img class="p3_img4" src="./images/4.png" /> -->
+                        <div class="p3_img p3_img_4"></div>
                     </div>
                 </div>
                 <div class="p3_imgwrapper5 p3_imgwrapper col-md-2">
-                    <div class="p3_inner_text">其</div>
-                    <div class="p3_inner_text">他</div>
                     <div class="imgBox">
-                        <img class="p3_img5" src="./images/5.png" />
+                        <div class="p3_inner_text_wrapper">
+                            <div class="p3_inner_text">其</div>
+                            <div class="p3_inner_text">他</div>
+                        </div>
+                        <!-- <img class="p3_img5" src="./images/5.png" /> -->
+                        <div class="p3_img p3_img_5"></div>
                     </div>
                 </div>
                 <div class="p3_padding col-md-1	">
@@ -199,6 +220,19 @@
             <div class="part3Bottom"></div>
             <!--<div class="intropage"></div>!-->
         </div>
+    </section>
+    <section class="ftco-section part4" id="section-about" style="background-color:rgb(40, 40, 40)">
+        <div id="p4_developer_list">
+            <h2 class="title">开发者名单</h2>
+            <!-- Get developer name list by js and insert multiple elements -->
+            <!-- like `<span>developer_name</span>` in `p#p4_developer_names` -->
+            <p class="col-md-8 col-sm-12" id="p4_developer_names"></p>
+        </div>
+        <div class="p4_bar_wrapper">
+            <img class="p4_asoul_bar" src="./images/part4_asoul_bar.png">
+            <div class="p4_bar_bottom"></div>
+        </div>
+        <div class="p4_asoul_bar_vert"></div>
     </section>
     <footer class="ftco-footer bg-light" id="section-counter">
         <div class="container">
@@ -214,7 +248,8 @@
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
             <circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
             <circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10"
-                stroke="#4586ff" /></svg></div>
+                stroke="#4586ff" />
+        </svg></div>
 
 
     <script src="js/jquery.min.js"></script>
