--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
         </div>
         <div class="p4_asoul_bar_vert"></div>
     </section>
-    <footer class="ftco-footer bg-light" id="section-counter" style="background-color:rgb(29, 29, 29)">
+    <footer class="ftco-footer" id="section-counter" style="background-color:rgb(29, 29, 29)">
         <div class="container">
             <div class="row">
                 <div class="col-md text-left">
-                    <h5 class="mt-0">&copy; ProJect A-SoulFAN All Rights Reserved</h5>
+                    <h5 id="footer_h5" class="mt-0">&copy; ProJect A-SoulFAN All Rights Reserved</h5>
                 </div>
             </div>
         </div>
