update index.html. lang

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
     <link rel="icon" href="./images/A-Cao.ico" type="image/x-icon" />
