fixed wrong css request and replaced webp to gif

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/icomoon.css">
-    <link href="font-awesome-4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -23,8 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div class="container">
             <img src="./images/Logo.svg " class="navbar-brand " style="width: 80px ">
-            <button id="nav_button" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-                aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <button id="nav_button" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span>菜单
             </button>
             <div class="collapse navbar-collapse" id="ftco-nav">
@@ -51,8 +49,7 @@
                         <button class="btn1 ripple-effect ">访问<span class="ripple"></span>
                         </button>-->
                         <div class="btn btn-primary" style="margin-top: -2em;">
-                            <a href="https://wiki.asoulfan.com/" class="btn">访问维基</a>
-                            |
+                            <a href="https://wiki.asoulfan.com/" class="btn">访问维基</a> |
                             <a href="https://tools.asoulfan.com/" class="btn">工具</a>
                         </div>
                     </div>
@@ -66,8 +63,7 @@
         <div class="part-introduce ftco-animate">
             <div class="decorate">◤</div>
             <p>
-                <a href="https://space.bilibili.com/703007996/">A-SOUL</a>
-                是小姐姐们用动捕技术展现出的3D虚拟形象,是国内首个由娱乐公司运营的虚拟偶像企划。团队由五位性格、 特长、爱好各异的女孩组成。
+                <a href="https://space.bilibili.com/703007996/">A-SOUL</a> 是小姐姐们用动捕技术展现出的3D虚拟形象,是国内首个由娱乐公司运营的虚拟偶像企划。团队由五位性格、 特长、爱好各异的女孩组成。
             </p>
         </div>
         <div class="part1-mobile-introduce ftco-animate">
@@ -254,19 +250,18 @@
     <section class="ftco-section part4" id="About" style="background-color:rgb(40, 40, 40)">
         <div class="ftco-animate container">
             <p class="p4_about_title" style="color: rgb(244, 244, 244);">关于我们
-            <p>
-            <p class="p4_about" style="color: rgb(244, 244, 244);">开发组
-            <p>
-                <a class="p4_about_1" href="https://space.bilibili.com/1442421278/dynamic"
-                    target="_blank">@ProJectASF</a>
-            <p class="p4_about" style="color: rgb(244, 244, 244);">联系我们
-            <p>
-                <a class="p4_link" href="https://space.bilibili.com/1442421278/dynamic" target="_blank">
-                    <img src="./images/bilibili.svg" class="navbar-brand" style="width: 28px">
-                </a>
-                <a class="p4_link" href="mailto:official@asoulfan.com">
-                    <img src="./images/email.svg" class="navbar-brand" style="width: 30px">
-                </a>
+                <p>
+                    <p class="p4_about" style="color: rgb(244, 244, 244);">开发组
+                        <p>
+                            <a class="p4_about_1" href="https://space.bilibili.com/1442421278/dynamic" target="_blank">@ProJectASF</a>
+                            <p class="p4_about" style="color: rgb(244, 244, 244);">联系我们
+                                <p>
+                                    <a class="p4_link" href="https://space.bilibili.com/1442421278/dynamic" target="_blank">
+                                        <img src="./images/bilibili.svg" class="navbar-brand" style="width: 28px">
+                                    </a>
+                                    <a class="p4_link" href="mailto:official@asoulfan.com">
+                                        <img src="./images/email.svg" class="navbar-brand" style="width: 30px">
+                                    </a>
 
 
         </div>
@@ -287,8 +282,7 @@
 
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen">
-        <div
-            style="width:100%; height:100%;display: -webkit-flex;display: flex; flex-direction: row; flex-wrap: nowrap; flex-shrink: 1; justify-content: center; align-items: center; ">
+        <div style="width:100%; height:100%;display: -webkit-flex;display: flex; flex-direction: row; flex-wrap: nowrap; flex-shrink: 1; justify-content: center; align-items: center; ">
             <img src="./images/Loader.gif " style="width: 64px; position: relative;">
         </div>
 
