压缩资源体积

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
     <div class="part1-mobile-introduce ftco-animate">
         <div class="introduce-wrapper">
-            <img src="./images/part1_bg_2.png" class="part1-bg-3">
+            <img src="./images/part1_bg_2.webp" class="part1-bg-3">
             <div class="mobile-decorate">◤</div>
             <p>
                 A-SOUL是小姐姐们用动捕技术展现出的3D虚拟形象，是国内首个由娱乐公司运营的虚拟偶像企划。团队由五位性格、特长、爱好各异的女孩组成。
@@ -85,12 +85,12 @@
         </div>
     </div>
     <div class="patr1-img-wrapper ftco-animate">
-        <!-- <img src="./images/part1.png"> -->
-        <img src="./images/part1_bg_1.png" class="part1-bg-1">
-        <img src="./images/part1_bg_2.png" class="part1-bg-2">
-        <img src="./images/part1_bg_3.png" class="part1-bg-3">
-        <img src="./images/part1_bg_4.png" class="part1-bg-4">
-        <img src="./images/part1_bg_5.png" class="part1-bg-5">
+        <!-- <img src="./images/part1.webp"> -->
+        <img src="./images/part1_bg_1.webp" class="part1-bg-1">
+        <img src="./images/part1_bg_2.webp" class="part1-bg-2">
+        <img src="./images/part1_bg_3.webp" class="part1-bg-3">
+        <img src="./images/part1_bg_4.webp" class="part1-bg-4">
+        <img src="./images/part1_bg_5.webp" class="part1-bg-5">
     </div>
 </section>
 <!-- part2 -->
@@ -111,7 +111,7 @@
                         <div class="p2_inner_text">
                             向晚AVA
                         </div>
-                        <img class="p2_img" src="images/1.png" alt="向晚AvA">
+                        <img class="p2_img" src="images/1.webp" alt="向晚AvA">
                     </div>
                 </div>
                 <!-- 贝拉 -->
@@ -127,7 +127,7 @@
                         <div class="p2_inner_text">
                             贝拉BELLA
                         </div>
-                        <img class="p2_img" src="images/2.png" alt="贝拉Bella">
+                        <img class="p2_img" src="images/2.webp" alt="贝拉Bella">
                     </div>
                 </div>
             </div>
@@ -145,7 +145,7 @@
                         <div class="p2_inner_text">
                             珈乐CAROL
                         </div>
-                        <img class="p2_img" src="images/3.png" alt="珈乐Carol">
+                        <img class="p2_img" src="images/3.webp" alt="珈乐Carol">
                     </div>
                 </div>
                 <!-- 嘉然 -->
@@ -161,7 +161,7 @@
                         <div class="p2_inner_text">
                             嘉然DIANA
                         </div>
-                        <img class="p2_img" src="images/4.png" alt="嘉然Diana">
+                        <img class="p2_img" src="images/4.webp" alt="嘉然Diana">
                     </div>
                 </div>
                 <!-- 乃琳 -->
@@ -177,7 +177,7 @@
                         <div class="p2_inner_text">
                             乃琳ELIEEN
                         </div>
-                        <img class="p2_img" src="images/5.png" alt="乃琳Eileen">
+                        <img class="p2_img" src="images/5.webp" alt="乃琳Eileen">
                     </div>
                 </div>
             </div>
@@ -200,7 +200,7 @@
                         <p class="p3_inner_text" style="font-family:MyFontName;">视</p>
                         <p class="p3_inner_text" style="font-family:MyFontName;">频</p>
                     </div>
-                    <!-- <img class="p3_img1" src="./images/1.png" /> -->
+                    <!-- <img class="p3_img1" src="./images/1.webp" /> -->
                     <div class="p3_img p3_img_1"></div>
                 </div>
                 <!-- <div style="filter: blur(5px);"></div> -->
@@ -211,7 +211,7 @@
                         <p class="p3_inner_text">文</p>
                         <p class="p3_inner_text">章</p>
                     </div>
-                    <!-- <img class="p3_img2" src="./images/2.png" /> -->
+                    <!-- <img class="p3_img2" src="./images/2.webp" /> -->
                     <div class="p3_img p3_img_2"></div>
                 </div>
             </div>
@@ -223,7 +223,7 @@
                         <div class="p3_inner_text p3MidText">了</div>
                         <div class="p3_inner_text p3MidText">解</div>
                     </div>
-                    <!-- <img class="p3_img3" src="./images/3.png" /> -->
+                    <!-- <img class="p3_img3" src="./images/3.webp" /> -->
                     <div class="p3_img p3_img_3"></div>
                 </div>
             </div>
@@ -233,7 +233,7 @@
                         <div class="p3_inner_text">音</div>
                         <div class="p3_inner_text">乐</div>
                     </div>
-                    <!-- <img class="p3_img4" src="./images/4.png" /> -->
+                    <!-- <img class="p3_img4" src="./images/4.webp" /> -->
                     <div class="p3_img p3_img_4"></div>
                 </div>
             </div>
@@ -243,7 +243,7 @@
                         <div class="p3_inner_text">其</div>
                         <div class="p3_inner_text">他</div>
                     </div>
-                    <!-- <img class="p3_img5" src="./images/5.png" /> -->
+                    <!-- <img class="p3_img5" src="./images/5.webp" /> -->
                     <div class="p3_img p3_img_5"></div>
                 </div>
             </div>
@@ -275,7 +275,7 @@
 
     </div>
     <div class="p4_bar_wrapper">
-        <img class="p4_asoul_bar" src="./images/part4_asoul_bar.png">
+        <img class="p4_asoul_bar" src="./images/part4_asoul_bar.webp">
     </div>
     <div class="p4_asoul_bar_vert"></div>
 </section>
@@ -292,7 +292,7 @@
 <!-- loader -->
 <div id="ftco-loader" class="show fullscreen">
     <div style="width:100%; height:100%;display: -webkit-flex;display: flex; flex-direction: row; flex-wrap: nowrap; flex-shrink: 1; justify-content: center; align-items: center; ">
-        <img src="./images/Loader.gif " style="width: 64px; position: relative;">
+        <img src="./images/Loader.webp " style="width: 64px; position: relative;">
     </div>
 </div>
 
