--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
             oldImage.parentNode.replaceChild(backgroundImage, oldImage);
         }
         backgroundImage.id = backgroundImageId;
-        backgroundImage.src = '/images/BackGround.webp';
+        backgroundImage.src = './images/BackGround.webp';
         if (backgroundImage.complete) {
             onBackgroundImageLoaded();
         } else {
