主页内容优化

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div id="home-container" class="container" style="margin-top: -60px;">
             <div class="row align-items-center text-center ftco-vh-100">
                 <div class="col-md-10 ftco-animate" style="text-align:left; text-decoration: none;">
-                    <h1 class="ftco-heading ">A-SOUL</h1>
+                    <h1 class="ftco-heading ">A-SOUL FAN</h1>
                     <h2 class="h5 ftco-subheading mb-5">属于一个魂的小城捏</h2>
                     <!--<a href="https://wiki.asoulfan.com/" class="btn btn-primary ftco-animate">访问社区</a>
                     <button class="btn1 ripple-effect ">访问<span class="ripple"></span>
@@ -124,7 +124,7 @@
                 <!-- 贝拉 -->
                 <div class="p2_introduce p2_introduce2">
                     <div class="p2_intro" style="background-color: #DB7D74;">
-                        乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合队长兼舞担。
+                        乐华娱乐旗下虚拟偶像女团A-SOUL成员，舞担兼任队长。
                         </br>
                         <a href="https://space.bilibili.com/672353429" class="p2_bilibili">
                             了解更多→
@@ -281,13 +281,13 @@
 
 
     </div>
-    <div class="p4_bar_wrapper">
+    <div class="p4_bar_wrapper ftco-animate">
         <img class="p4_asoul_bar" src="./images/part4_asoul_bar.webp">
     </div>
-    <div class="p4_asoul_bar_vert"></div>
+    <div class="p4_asoul_bar_vert ftco-animate"></div>
 </section>
 <footer class="ftco-footer" id="section-counter" style="background-color:rgb(29, 29, 29)">
-    <div class="container">
+    <div class="container ftco-animate">
         <div class="row">
             <div class="col-md text-left">
                 <h5 id="footer_h5" class="mt-0">&copy; ProJect ASF</h5>
