--- a/index.html
+++ b/index.html
@@ -281,13 +281,13 @@
 
 
     </div>
-    <div class="p4_bar_wrapper ftco-animate">
+    <div class="p4_bar_wrapper">
         <img class="p4_asoul_bar" src="./images/part4_asoul_bar.webp">
     </div>
-    <div class="p4_asoul_bar_vert ftco-animate"></div>
+    <div class="p4_asoul_bar_vert"></div>
 </section>
 <footer class="ftco-footer" id="section-counter" style="background-color:rgb(29, 29, 29)">
-    <div class="container ftco-animate">
+    <div class="container">
         <div class="row">
             <div class="col-md text-left">
                 <h5 id="footer_h5" class="mt-0">&copy; ProJect ASF</h5>
