--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="p2_intro" style="background-color: #9AC8E2;">
                         乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合游戏担当。
                         </br>
-                        <a href="https://space.bilibili.com/672346917" class="p2_bilibili">
+                        <a href="https://wiki.asoulfan.com/zh/%E5%90%91%E6%99%9A" class="p2_bilibili">
                             了解更多→
                         </a>
                     </div>
@@ -126,7 +126,7 @@
                     <div class="p2_intro" style="background-color: #DB7D74;">
                         乐华娱乐旗下虚拟偶像女团A-SOUL成员，舞担兼任队长。
                         </br>
-                        <a href="https://space.bilibili.com/672353429" class="p2_bilibili">
+                        <a href="https://wiki.asoulfan.com/zh/%E8%B4%9D%E6%8B%89" class="p2_bilibili">
                             了解更多→
                         </a>
                     </div>
@@ -144,7 +144,7 @@
                     <div class="p2_intro" style="background-color: #B8A6D9;">
                         乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合Vocal担当。
                         </br>
-                        <a href="https://space.bilibili.com/351609538" class="p2_bilibili">
+                        <a href="https://wiki.asoulfan.com/zh/%E7%8F%88%E4%B9%90" class="p2_bilibili">
                             了解更多→
                         </a>
                     </div>
@@ -160,7 +160,7 @@
                     <div class="p2_intro" style="background-color: #E799B0;">
                         乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合吃货担当。
                         </br>
-                        <a href="https://space.bilibili.com/672328094/" class="p2_bilibili">
+                        <a href="https://wiki.asoulfan.com/zh/%E5%98%89%E7%84%B6" class="p2_bilibili">
                             了解更多→
                         </a>
                     </div>
@@ -176,7 +176,7 @@
                     <div class="p2_intro" style="background-color: #576690;">
                         乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合主持担当。
                         </br>
-                        <a href="https://space.bilibili.com/672342685" class="p2_bilibili">
+                        <a href="https://wiki.asoulfan.com/zh/%E4%B9%83%E7%90%B3" class="p2_bilibili">
                             了解更多→
                         </a>
                     </div>
