--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     </div>
                     <div class="p2_imgwrapper5 p2_imgwrapper">
                         <div class="p2_inner_text">
-                            乃琳ELIEEN
+                            乃琳EILEEN
                         </div>
                         <img class="p2_img" src="images/5.webp" alt="乃琳Eileen">
                     </div>
