--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     <button class="btn1 ripple-effect ">访问<span class="ripple"></span>
                     </button>-->
                     <div class="btn btn-primary" style="margin-top: -2em;">
-                        <a href="//wiki.asoulfan.com/" class="btn">访问维基</a> |
-                        <a href="//tools.asoulfan.com/" class="btn">工具</a>
+                        <a href="//wiki.asoulfan.cn/" class="btn">访问维基</a> |
+                        <a href="//tools.asoulfan.cn/" class="btn">工具</a>
                     </div>
                 </div>
             </div>
