--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md text-left">
-                <h5 id="footer_h5" class="mt-0">&copy; ProJect ASF</h5>
+                <h5 id="footer_h5" class="mt-0">&copy; ProJect ASF 鲁ICP备2021029881号</h5>
             </div>
         </div>
     </div>
