--- a/index.html
+++ b/index.html
@@ -278,6 +278,16 @@
             <a class="p4_link" href="mailto:official@asoulfan.com">
                 <img src="./images/email.svg" class="navbar-brand" style="width: 30px">
             </a>
+            <p class="p4_about" style="color: rgb(244, 244, 244);">友情链接
+            <p>
+            <p>
+                <a class="p4_about_1" href="https://asoulcnki.asia/" target="_blank" style="margin-right:30px;">枝网查重</a>
+                <a class="p4_about_1" href="https://livedb.asoulfan.com" target="_blank"style="margin-right:30px;">ASDB</a>
+                <a class="p4_about_1" href="https://www.asoul.cloud" target="_blank"style="margin-right:30px;">一个魂二创</a>
+                <a class="p4_about_1" href="https://www.asoulwiki.com" target="_blank"style="margin-right:30px;">ASWIKI</a>
+                <a class="p4_about_1" href="https://ybb.asoulfan.com" target="_blank"style="margin-right:30px;">YBB</a>
+
+
 
 
     </div>
@@ -290,7 +300,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md text-left">
-                <h5 id="footer_h5" class="mt-0">&copy; ProJect ASF 鲁ICP备2021029881号</h5>
+                <h5 id="footer_h5" class="mt-0">&copy; ProJect ASF <a href="https://beian.miit.gov.cn/" target="_blank" style="color:white; margin-left: 25px;" >鲁ICP备2021029881号</a></h5>
             </div>
         </div>
     </div>
