主页超链接适配修复

--- a/index.html
+++ b/index.html
@@ -280,12 +280,13 @@
             </a>
             <p class="p4_about" style="color: rgb(244, 244, 244);">友情链接
             <p>
-            <p>
+            <p><div style="display: flex; flex-direction: row; flex-wrap: wrap; width: 100vw;">
                 <a class="p4_about_1" href="https://asoulcnki.asia/" target="_blank" style="margin-right:30px;">枝网查重</a>
                 <a class="p4_about_1" href="https://livedb.asoulfan.com" target="_blank"style="margin-right:30px;">ASDB</a>
                 <a class="p4_about_1" href="https://www.asoul.cloud" target="_blank"style="margin-right:30px;">一个魂二创</a>
                 <a class="p4_about_1" href="https://www.asoulwiki.com" target="_blank"style="margin-right:30px;">ASWIKI</a>
                 <a class="p4_about_1" href="https://ybb.asoulfan.com" target="_blank"style="margin-right:30px;">YBB</a>
+            </div>
 
 
 
